--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
+    <style name="MyStyle" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:textColor">#000</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">#fff</item>
+    </style>
+
 
 </resources>
