--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,14 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
-    <style name="MyStyle" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="MyStyle" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:textColor">#000</item>
         <item name="android:gravity">center</item>
         <item name="android:background">#fff</item>
