Just Create a Table, and will find some similar UI and Implementation today

--- a/app/src/main/res/layout/fragment_expense_income.xml
+++ b/app/src/main/res/layout/fragment_expense_income.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/vp"
+        android:id="@+id/vp2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="100dp"></TextView>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView2"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:layout_alignParentBottom="true"
-        android:background="?android:attr/windowBackground"
+      
         app:itemBackground="@null"
         app:itemIconTint="@drawable/bottom_navigation_selector"
         app:itemTextColor="@drawable/bottom_navigation_selector"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/expense_menu" />
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="expense and income"
+        ></TextView>
 </LinearLayout>
