--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,17 +4,18 @@
         android:id="@+id/navigation_home"
         android:icon="@drawable/iv1_p"
         android:title="首页" />
+
     <item
+
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/iv2_p"
-        android:title="吃" />
+        android:icon="@drawable/transaction_off"
+        android:title="吃"
+
+        />
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/iv3_p"
         android:title="交通" />
-    <item
-        android:id="@+id/navigation_person"
-        android:icon="@drawable/iv4_p"
-        android:title="住" />
+
 
 </menu>
