--- a/app/src/main/res/layout/fragment_income.xml
+++ b/app/src/main/res/layout/fragment_income.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/imageicon"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="10dp"
@@ -21,6 +22,7 @@
 
 
         <TextView
+            android:id="@+id/type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -44,24 +46,28 @@
         android:gravity="top">
 
         <ImageButton
+            android:id="@+id/salary"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/salary"></ImageButton>
 
         <ImageButton
+            android:id="@+id/red_packet"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="50dp"
             android:background="@drawable/red_packet"></ImageButton>
 
         <ImageButton
+            android:id="@+id/refund"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="50dp"
             android:background="@drawable/refund"></ImageButton>
 
         <ImageButton
+            android:id="@+id/cash"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="50dp"
@@ -108,12 +114,14 @@
         android:gravity="top">
 
         <ImageButton
+            android:id="@+id/rewards"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="10dp"
             android:background="@drawable/rewards"></ImageButton>
 
         <ImageButton
+            android:id="@+id/others"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="50dp"
