--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         style="?android:listSeparatorTextViewStyle"
@@ -19,14 +19,16 @@
         android:orientation="horizontal"
         android:id="@+id/company_button"
         android:layout_below="@+id/account_company_text"
-        android:layout_marginStart="30dp">
+        android:layout_marginStart="10dp">
+
         <Button
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="10dp"
+            android:id="@+id/paypal_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/paypal_button"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/paypal_logo_style"></Button>
+
         <Button
             android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
