--- a/app/src/main/res/layout/fragment_single_chart.xml
+++ b/app/src/main/res/layout/fragment_single_chart.xml
@@ -26,6 +26,16 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:background="#FFFFFFFF"
+        android:id="@+id/chart_null_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
