--- a/app/src/main/res/layout/fragment_income.xml
+++ b/app/src/main/res/layout/fragment_income.xml
@@ -28,15 +28,14 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:text="Salary"
-
             android:textSize="30sp"></TextView>
 
         <TextView
             android:id="@+id/textView1"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
-            android:layout_marginLeft="120dp"
             android:layout_marginTop="10dp"
+            android:gravity="end"
             android:textSize="30sp"></TextView>
     </LinearLayout>
 
