--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -183,19 +183,12 @@
         android:gravity="top"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/nov"
-            android:layout_marginTop="20dp"></ImageButton>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Card"
-            android:layout_marginTop="20dp"
-            ></Button>
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/expense_spinner"
+            android:layout_margin="10dp"
+            />
     </LinearLayout>
 
     <LinearLayout
