--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,8 @@
     <color name="darkRed">#8B0000</color>
     <color name="grey">#646464</color>
     <color name="lightGrey">#BCBCBC</color>
+    <color name="purple">#69415D</color>
+    <color name="purple_start_color">#6178f2</color>
+    <color name="purple_end_color">#925eff</color>
 
 </resources>
