--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:id="@+id/root"
     android:gravity="top"
+    android:background="@drawable/purple_bg"
     >
 
     <LinearLayout
@@ -13,6 +14,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:background="@drawable/purple_bg"
         >
 
         <TextView
@@ -22,6 +24,7 @@
             android:text="MONTHLY INCOME"
             android:textSize="15sp"
             android:layout_marginTop="10sp"
+            android:background="@drawable/purple_bg"
             >
 
         </TextView>
@@ -29,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/others"
+
             >
         </ImageView>
 
@@ -38,19 +42,54 @@
             android:layout_marginLeft="0dp"
             android:text="MONTHLY EXPENSE"
             android:textSize="15sp"
-            android:layout_marginTop="10sp"></TextView>
+            android:layout_marginTop="10sp"
+            android:background="@drawable/purple_bg"
+            ></TextView>
     </LinearLayout>
-
-
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="@drawable/purple_bg"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Transactions"
+            android:gravity="center"
+            android:padding="10dp"
+            android:textSize="18sp"
+            android:textColor="@android:color/white"
+            android:background="@drawable/purple_bg"
+            />
         <Button
             android:id="@+id/plus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Button"
+
             />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/purple_bg"
+
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp">
+
     </LinearLayout>
 
 
