--- a/app/src/main/res/layout/fragment_account_list.xml
+++ b/app/src/main/res/layout/fragment_account_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AccountListFragment"
-    android:background="@color/lightGrey">
+    android:background="@drawable/account_background">
 
     <ImageView
         android:id="@+id/title_image_account_list"
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:layout_marginTop="10dp"
         android:id="@+id/total_image_account_list"
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -25,6 +26,7 @@
         tools:layout_editor_absoluteX="16dp" />
 
     <TextView
+        android:layout_marginTop="10dp"
         android:id="@+id/total_text_account_list"
         android:layout_width="150dp"
         android:layout_height="60dp"
@@ -35,10 +37,12 @@
         android:text="$0.00"
         android:textSize="30dp"
         android:gravity="end|center_vertical"
+        android:background="#00000000"
  />
 
     <androidx.recyclerview.widget.RecyclerView
         android:background="#00000000"
+        android:layout_marginTop="10dp"
         android:id="@+id/account_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
