--- a/app/src/main/res/layout/list_item_account.xml
+++ b/app/src/main/res/layout/list_item_account.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dp"
     android:gravity="start"
-    android:background="@color/quantum_white_100">
+    android:background="@color/quantum_white_100"
+    android:layout_marginVertical="5dp"
+    android:layout_marginHorizontal="5dp">
 
     <TextView
         android:id="@+id/list_item_account_balance"
