--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/root"
     android:gravity="top"
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30sp"
             android:layout_marginLeft="0dp"
-            android:text="MONTHLY INCOME"
+
             android:textSize="15sp"
             android:layout_marginTop="10sp"
             android:background="@drawable/purple_bg"
@@ -31,7 +31,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/others"
+
 
             >
         </ImageView>
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30sp"
             android:layout_marginLeft="0dp"
-            android:text="MONTHLY EXPENSE"
+
             android:textSize="15sp"
             android:layout_marginTop="10sp"
             android:background="@drawable/purple_bg"
@@ -65,13 +65,7 @@
             android:textColor="@android:color/white"
             android:background="@drawable/purple_bg"
             />
-        <Button
-            android:id="@+id/plus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Button"
 
-            />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_marginBottom="10dp"
@@ -84,13 +78,17 @@
 
             />
 
+        <ImageButton
+            android:id="@+id/plus"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:theme="@style/AppTheme"
+            android:text="Note"
+            android:layout_marginTop="-100dp"
+            android:src="@drawable/others"
+            ></ImageButton>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp">
-
-    </LinearLayout>
 
 
 </LinearLayout>
