--- a/app/src/main/res/layout/fragment_account_list.xml
+++ b/app/src/main/res/layout/fragment_account_list.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AccountListFragment"
-    android:background="@drawable/account_background">
+    android:background="@drawable/account_background"
+    android:orientation="vertical"
+    android:layout_gravity="top"
+    android:gravity="top">
 
     <ImageView
         android:id="@+id/title_image_account_list"
@@ -15,41 +18,47 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:layout_marginTop="10dp"
-        android:id="@+id/total_image_account_list"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/total_asset"
-        app:layout_constraintTop_toBottomOf="@+id/title_image_account_list"
-        tools:layout_editor_absoluteX="16dp" />
+        android:layout_height="wrap_content"
+        >
 
-    <TextView
-        android:layout_marginTop="10dp"
-        android:id="@+id/total_text_account_list"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/total_image_account_list"
-        app:layout_constraintEnd_toEndOf="@+id/total_image_account_list"
-        app:layout_constraintTop_toBottomOf="@+id/title_image_account_list"
-        android:text="$0.00"
-        android:textSize="30dp"
-        android:gravity="end|center_vertical"
-        android:background="#00000000"
- />
+        <ImageView
+            android:id="@+id/total_image_account_list"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@drawable/total_asset"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:id="@+id/total_text_account_list"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/total_image_account_list"
+            app:layout_constraintEnd_toEndOf="@+id/total_image_account_list"
+            android:text="$0.00"
+            android:textSize="30dp"
+            android:gravity="end|center_vertical"
+            android:background="#00000000"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:background="#00000000"
-
+        android:layout_margin="10dp"
         android:id="@+id/account_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="420dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/total_image_account_list"></androidx.recyclerview.widget.RecyclerView>
-
+        app:layout_constraintTop_toBottomOf="@+id/account_adding_button"
+        />
     <Button
         android:id="@+id/account_adding_button"
         android:layout_width="wrap_content"
@@ -58,6 +67,7 @@
         android:background="@drawable/add_account_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/account_recycler_view" />
+        app:layout_constraintTop_toBottomOf="@+id/total_image_account_list"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
