--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -53,7 +53,8 @@
         android:layout_height="match_parent"
         android:background="@drawable/purple_bg"
         android:orientation="vertical"
-        tools:context=".MainActivity">
+        android:gravity="top"
+        >
 
         <TextView
             android:layout_width="match_parent"
@@ -64,17 +65,19 @@
             android:textSize="18sp"
             android:textColor="@android:color/white"
             android:background="@drawable/purple_bg"
+            android:layout_weight="0.1"
             />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
-            android:layout_marginBottom="10dp"
+
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="420dp"
             android:background="@drawable/purple_bg"
+            android:layout_weight="0.8"
 
             />
 
@@ -84,8 +87,10 @@
             android:layout_height="50dp"
             android:theme="@style/AppTheme"
             android:text="Note"
-            android:layout_marginTop="-100dp"
-            android:src="@drawable/others"
+            android:src="@drawable/ic_new_adding"
+            android:layout_weight="0.1"
+            android:layout_gravity="center"
+            android:background="#00000000"
             ></ImageButton>
     </LinearLayout>
 
